--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "swr": "^2.2.4",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
